--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 3000
 DB_CNN= mongodb+srv://adminproject:PYgrfe8iHFzhWHcx@cluster0.3qczo.mongodb.net/projectosdb
+JWT_SECRET=Estaesmiclavesecreta
